CI: Fix file permissions
Signed-off-by: Benedikt Spranger <b.spranger@linutronix.de>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Create downloads directory
       run: mkdir downloads
 
+    - name: Fix ownership
+      run: sudo chown $(whoami) Fabrication
+
     - name: Gerber Archive
       uses: thedoctor0/zip-release@master
       with:
